--- a/html/css/site.css
+++ b/html/css/site.css
@@ -3,7 +3,7 @@
 /* Layout */
 body { background-color:#f2f3ec;}
 header, footer {margin:0; padding:0; }
-header { background-color:#f2f3ec; height:194px; margin-bottom:13px;}
+header { background-color:#f2f3ec; height:154px; margin-bottom:13px;}
 footer { background-color:#f2f3ec; height:149px; }
 
 #page { background-color:#e6e9ca; }
@@ -31,14 +31,14 @@ footer #copyright { right:244px; top:51px; }
 
 
 /* Titles & Type */
-h1,h2,h3,h4,h5,h6 { font-family: LobsterTwoRegular, "Helvetica Roman", Helvetica, sans-serif; }
+h1,h2,h3,h4,h5,h6 { font-family: LobsterTwoRegular, "Helvetica Roman", Helvetica, sans-serif; font-weight:normal; }
 
-#logo h1, #flogo  h1 { font-size: 69px; color:green; font-weight:normal; }
+#logo h1, #flogo  h1 { font-size: 69px; color:green; font-family: LobsterTwoBold, "Helvetica Roman", Helvetica, sans-serif; }
 #logo h1 span, #flogo h1 span { color:#98641d;}
-#subtitle { font-size: 22px; font-weight:bold;}
+#subtitle, h2 { font-size: 22px; font-weight:bold; font-family: "Helvetica Roman", Helvetica, sans-serif;}
 
-#content h1 { font-size: 39px; color:green; font-weight:normal; }
-#content p { font-size: 19px; color:green; font-weight:normal; }
+h1 { font-size: 39px; color:green; font-weight:normal; }
+p { font-size: 19px; color:green; font-weight:normal; }
 
 .em { font-style:italic;}
 
