--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,75 @@
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+
+  <meta charset="utf-8">
+
+  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
+       More info: h5bp.com/i/378 -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <meta name="description" content="Garden and Garden Matching service for Austin Texas">
+
+  <!-- Mobile viewport optimized: h5bp.com/viewport -->
+  <meta name="viewport" content="width=device-width">
+
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
+
+  <link rel="stylesheet" href="/css/lobster-two-fontfacekit/stylesheet.css">
+  <link rel="stylesheet" href="/css/base.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/site.css">
+  
+  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
+
+  <!-- All JavaScript at the bottom, except this Modernizr build.
+       Modernizr enables HTML5 elements & feature detects for optimal performance.
+       Create your own custom Modernizr build: www.modernizr.com/download/ -->
+  <script src="/js/libs/modernizr-2.5.3.min.js"></script>
+
+
 </head>
 <body>
+<div id="skip" class="visuallyhidden">
+    <a name="top"></a>
+    <a href="#nav">skip to navigation</a>
+    <a href="#content">skip to content</a>
+  </div>
+  <div id="page" class="rel col1 overflow">
+    <header class="rel col1 ">
+      <div id="headerContainer" class="rel container center">
+        <div id="logo" class="abs">
+          <h1>Garden<span>Mate</span></h1>
+        </div>
+        <div id="subtitle" class="abs">
+          Find a Community Garden
+        </div>
+        
+        <nav class="abs z1">
+          <a name="nav"></a>
+          <ul id="navigation" class="inline pad-side">
+            <li class="" slug=""><a href="#">Home</a></li>
+            <li class="" slug=""><a href="#">About Us</a></li>
+            <li class="" slug=""><a href="#">Host a Garden</a></li>
+            <li class="" slug=""><a href="#">Find a Garden</a></li>
+            <li class="" slug=""><a href="#">Login</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
 <%= yield %>
+    <footer class="rel w100 wrap-up-70">
+      <div id="footerContainer" class="rel container center">
+            <div id="flogo" class="abs">
+                <h1>Garden<span>Mate</span></h1>
+            </div>
+            <div id="footerFB" class="abs">
+            	
+            </div>
+      </div>
+    </footer>
+  </div> 
 
 </body>
 </html>
