--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,9 @@
 <head>
   <title>GardenDatingService</title>
   <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag "lobster-two-fontfacekit/stylesheet" %>
   <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "modernizr-2.5.3.min.js" %>
   <%= csrf_meta_tag %>
 
   <meta charset="utf-8">
@@ -16,21 +18,6 @@
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width">
-
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-
-  <link rel="stylesheet" href="/css/lobster-two-fontfacekit/stylesheet.css">
-  <link rel="stylesheet" href="/css/base.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/site.css">
-  
-  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
-
-  <!-- All JavaScript at the bottom, except this Modernizr build.
-       Modernizr enables HTML5 elements & feature detects for optimal performance.
-       Create your own custom Modernizr build: www.modernizr.com/download/ -->
-  <script src="/js/libs/modernizr-2.5.3.min.js"></script>
-
 
 </head>
 <body>
